# ne-mo

./: README.md  pyproject.toml
colab/: notebook.ipynb
neural-modeler/: __init__.py  _core.py  _version.py  cli.py  data.py  util.py
neural-modeler/train/: __init__.py  _names.py  _version.py  colab.py  core.py  full.py  lightning_module.py  metadata.py
