[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-modeler"
description = "Neural Modeler"
authors = [
    {name = "Cagatay", email = "cagatay@cagatay.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "librosa",
    "matplotlib",
    "numpy",
    "pydantic>=2.0.0",
    "pytorch_lightning",
    "scipy",  # Required by auraloss
    "sounddevice",
    "tensorboard",
    "torch",
    "transformers>=4",
    "tqdm",
    "wavio>=0.0.5",
]
dynamic = ["version"]

[project.optional-dependencies]
# Optional features
transformers-compat = [
    "transformers>=4",  # Issue-294
    "numpy",  # NB: Older PyTorch versions require numpy<2
]

test = [
    "pytest",
    "pytest-mock",
    "requests",
]

[project.urls]
homepage = "https://github.com/cagataydonmez/"

[project.scripts]
nam = "nam.cli:nam_gui"
nam-full = "nam.cli:nam_full"
nam-hello-world = "nam.cli:nam_hello_world"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "neural-modeler/_version.py"

[tool.setuptools]
packages = ["nam", "nam._dependencies", "nam._dependencies.auraloss", "nam.train", "nam.train.gui", "nam.train.gui._resources", "nam.models", "nam.models._resources" ]

[tool.setuptools.package-dir]
nam = "neural-modeler"
